--- a/src/index.css
+++ b/src/index.css
@@ -2,10 +2,20 @@
 @tailwind components;
 @tailwind utilities;
 
-
 input::placeholder {
-    font-weight: bold;
-    opacity: 0.5;
-    color: rgb(168, 168, 168);
+  font-weight: bold;
+  opacity: 0.5;
+  color: rgb(168, 168, 168);
+}
+
+@layer utilities {
+  /* Hide scrollbar for Chrome, Safari and Opera */
+  .no-scrollbar::-webkit-scrollbar {
+    display: none;
   }
-  
+  /* Hide scrollbar for IE, Edge and Firefox */
+  .no-scrollbar {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+  }
+}
